--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql2": "^2.3.0",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "sequelize": "^6.6.5",
+    "sequelize-cli": "^6.2.0"
   }
 }
