--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
     "express": "^4.17.1",
     "mysql2": "^2.3.0",
     "nodemon": "^2.0.12",
-    "sequelize": "^6.6.5",
+    "sequelize": "^6.6.5"
+  },
+  "devDependencies": {
     "sequelize-cli": "^6.2.0"
   }
 }
