fixed db asociation post ad comments

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -5,20 +5,20 @@
     "database": "TutorialDB",
     "host": "127.0.0.1",
     "port": "13306",
-    "dialect": "mysql"
+    "dialect": "mariadb"
   },
   "test": {
     "username": "root",
     "password": null,
     "database": "database_test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mariadb"
   },
   "production": {
     "username": "root",
     "password": null,
     "database": "database_production",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mariadb"
   }
 }
